ldap is needed for sogo
svn path=/overlay/; revision=426

--- a/gnustep-apps/sogo/ChangeLog
+++ b/gnustep-apps/sogo/ChangeLog
@@ -2,9 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Jan 2010; Bernard Cafarelli <voyageur@gentoo.org> sogo-1.1.0-r1.ebuild:
+  ldap is mandatory
+
 *sogo-1.1.0-r1 (12 Jan 2010)
 
-  12 Jan 2010; <bernard@gentoo.org> -sogo-1.1.0.ebuild,
+  12 Jan 2010; Bernard Cafarelli <voyageur@gentoo.org> -sogo-1.1.0.ebuild,
   +sogo-1.1.0-r1.ebuild, -files/sogo.initd, +files/sogod.initd,
   +metadata.xml:
   Create ChangeLog to keep tracks of things, new ebuild from bug #295636
