Fix patch names in sope live ebuild
svn path=/overlay/; revision=429

--- a/gnustep-libs/sope/ChangeLog
+++ b/gnustep-libs/sope/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Jan 2010; Bernard Cafarelli <voyageur@gentoo.org>
+  +files/sope-r1660-use_system_root.patch, sope-9999.ebuild,
+  -files/sope-use_system_root.patch:
+  Fix patch names
+
 *sope-9999 (13 Jan 2010)
 
   13 Jan 2010; Bernard Cafarelli <voyageur@gentoo.org>
