Fix paths in generated menus and sed lines to evaluate EPREFIX
(Portage version: 2.2.0_alpha85/svn/Linux x86_64, signed Manifest commit with key C74525F2)

svn path=/overlay/; revision=442

--- a/x11-wm/windowmaker/ChangeLog
+++ b/x11-wm/windowmaker/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org> windowmaker-9999.ebuild:
+  Fix paths in generated menus and sed lines to evaluate EPREFIX
+
 *windowmaker-9999 (10 Feb 2012)
 
   10 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org>
