--- a/x11-themes/gnustep-silver-theme/ChangeLog
+++ b/x11-themes/gnustep-silver-theme/ChangeLog
@@ -1,6 +1,12 @@
-# ChangeLog for x11-themes/gnustep-silvertheme
+# ChangeLog for x11-themes/gnustep-silver-theme
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*gnustep-silver-theme-2.5 (20 Feb 2012)
+
+  20 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org>
+  -gnustep-silvertheme-2.5.ebuild, +gnustep-silver-theme-2.5.ebuild:
+  Fix package name
 
 *gnustep-silvertheme-2.5 (15 Feb 2012)
 
